--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "learning-resource_covid-19",
+  "homepage": "https://yxr9.github.io/LearningResource_Genetic-modification/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
