--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "learning-resource_covid-19",
-  "homepage": "https://yxr9.github.io/LearningResource_Genetic-modification/",
+  "homepage": "https://yxr9.github.io/LearningResource_Genetic-modification",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -8,6 +8,7 @@
     "@testing-library/react": "^13.1.1",
     "@testing-library/user-event": "^13.5.0",
     "antd": "^4.20.1",
+    "gh-pages": "^3.2.3",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-router-dom": "^6.3.0",
@@ -15,6 +16,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
